fix some bugs 2020.11

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+kylin-recorder (1.2.1) v101; urgency=medium
+
+  * 修复bug#24635 ：设置存储路径“存储为”，结束录制音频后，弹窗显示存储路径，显示文件名，但是没有保存按钮，一定要在位置处重新选择路径才能保存
+  * 修复bug#24620 ：主题更改为深色模式，麒麟录音界面中“文件列表”四个字消失
+  * 修复bug#23420 ：开始菜单麒麟录音图标显示异常，与任务栏麒麟录音图标不一致
+  * 修复bug#24435 ：【台式机】录音无声音
+  * 修复bug#24365 ：录音格式为wav时，录制文件有较大嘈杂声
+  * 修复bug#24338 ：mini窗口时，开始录音响应区域异常
+  * 修复bug#24312 ：文件列表已录制文件不可播放
+  * 修复bug#24303 ：文件列表可以多个文件同时播放
+  * 修复bug#24300 ：文件列表滑动条样式
+  * 修复bug#24249 ：文件列表没有和本地文件同步删除
+  * 修复bug#24246 ：深色主题时，mini窗口界面显示异常
+  * 修复bug#24245 ：深色模式时设置弹窗异常
+  * 修复bug#24241 ：录音区域点击任意位置都可响应开始录音
+  * 修复bug#24240 ：深色主题时，界面异常显示
+  * 修复bug#24223 ：浅色主题时点击主界面之外区域时，文件裂变区域会有灰色背景
+  * 修复bug#24219 ：主界面区域划分不妥当
+
+ -- baijincheng <baijincheng@kylinos.cn>  Wed, 4 Nov 2020 10:50:00 +0800
+
 kylin-recorder (1.2.0) v101; urgency=medium
 
   * 麒麟录音新版本迭代
