--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ kylin-recorder (1.2.17) v101; urgency=medium
   * bug#33860：修改设置界面文件格式的间隔问题
   * bug#32051：深色主题下界面优化
   * bug#25006：深色模式下，设置弹窗UI异常 
+  * 修改三联按钮的菜单按钮图标名,切换启动时加载列表的方式
 
  -- baijincheng <baijincheng@kylinos.cn>  Tue, 19 Jan 2021 21:00:00 +0800
 
