0122,修复下拉框颜色超边界、修复禅道3个bug、录音时禁止播放列表文件

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+kylin-recorder (1.2.19) v101; urgency=medium
+
+  * 修复bug#34793：设置界面边角显示黑色问题
+  * 修复bug#35236：播放和删除录音文件的悬浮提示未汉化
+  * 修复bug#24255：录音界面音量进度条数值大小修改
+  * 修复bug#20538：最小化到任务栏，缩略图窗口名未汉化
+  * 优化：设置界面改为模态窗口
+  * 优化：正在录音时列表悬浮特效禁用，非录音状态时开启悬浮特效
+
+ -- baijincheng <baijincheng@kylinos.cn>  Thu, 21 Jan 2021 20:25:00 +0800
+
 kylin-recorder (1.2.18) v101; urgency=medium
 
   * 内测时，修复raw文件路径设置错误的问题
@@ -8,7 +19,7 @@ kylin-recorder (1.2.17) v101; urgency=medium
 
   * 修复bug#33860：修改设置界面文件格式的间隔问题
   * 修复bug#32051：深色主题下界面优化
-  * 修复bug#25006：深色模式下，设置弹窗UI异常 
+  * 修复bug#25006：深色模式下，设置弹窗UI异常
   * 修复bug#34787：静音图标显示需优化
   * 修改三联按钮的菜单按钮图标名,切换启动时加载列表的方式
 
