--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,32 @@
+kylin-recorder (1.2.23) v101; urgency=medium
+
+  * 修复bug# 35865：设置窗口默认不居中显示 
+  * 修复bug# 35607：保存录音时可将录音命名为.mp3，导致此音频变为隐藏文件  
+  * 修复bug# 34915：在麒麟录音界面删除的录音文件，不会进入回收站 
+  * 修复bug# 24333：文件列表缺少文件右键点击功能 
+
+ -- baijincheng <baijincheng@kylinos.cn>  Fri, 29 Jan 2021 09:40:00 +0800
+
+kylin-recorder (1.2.22) v101; urgency=medium
+
+  * 关于界面服务与支持修改为链接
+
+ -- baijincheng <baijincheng@kylinos.cn>  Thu, 28 Jan 2021 09:40:00 +0800
+
+kylin-recorder (1.2.21) v101; urgency=medium
+
+  * 修复bug# 36272：【中文化】【麒麟录音】播放/暂停、删除按钮的悬浮框未汉化
+
+ -- baijincheng <baijincheng@kylinos.cn>  Wed, 27 Jan 2021 20:05:00 +0800
+
+kylin-recorder (1.2.20) v101; urgency=medium
+
+  * 修复bug# 34901：深色主题下主界面边框有白边
+  * 修复bug# 32064：保存文件时保存文件失败
+  * 修复bug# 25006：深色模式下，设置弹窗UI异常（设置界面白边）
+
+ -- baijincheng <baijincheng@kylinos.cn>  Mon, 25 Jan 2021 20:25:00 +0800
+
 kylin-recorder (1.2.19) v101; urgency=medium
 
   * 修复bug#34793：设置界面边角显示黑色问题
