--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kylin-recorder (1.2.23kord~rc4) v101; urgency=medium
+
+  * 2021/02/04版本
+
+ -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Feb 2021 09:30:00 +0800
+
 kylin-recorder (1.2.23kord~rc3) v101; urgency=medium
 
   * 修复bug# 26216：录制时间过长时，保存弹窗弹出时间过长
