--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+kylin-recorder (1.2.23kord~rc6) v101; urgency=high
+
+  * 修复bug# 39136：应用的弹窗出现时应该于应用居中出现，而不是桌面居中出现
+  * 修复bug# 38975：录音过程中关闭麒麟录音后，再次打开麒麟录音时不能打开，终端报段错误
+  * 修复bug# 38923：深色模式下，关于弹窗链接没有反白
+  * 修复bug# 38883：主界面在正常窗口和 mini窗口之间切换时，任务栏麒麟录音图标闪烁
+
+ -- zoujunnan <zoujunnan@kylinos.cn>  Thu, 25 Feb 2021 09:30:00 +0800
+
 kylin-recorder (1.2.23kord~rc5) v101; urgency=medium
 
   * 修复bug# 38511：更改系统字体大小后，麒麟录音文字显示不全
