--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kylin-recorder (1.2.23kord~rc7) v101; urgency=high
+
+  * 修复漏洞
+
+ -- zoujunnan <zoujunnan@kylinos.cn>  Tue, 2 Mar 2021 09:30:00 +0800
+
 kylin-recorder (1.2.23kord~rc6) v101; urgency=high
 
   * 修复bug# 39136：应用的弹窗出现时应该于应用居中出现，而不是桌面居中出现
