--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kylin-recorder (1.2.23kord~rc16) v101; urgency=high
+
+  * 修复bug43240：用户手册内容与麒麟录音实际情况不符
+  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音
+
+ -- baijincheng <baijincheng@kylinos.cn>  Thu, 18 Mar 2021 16:22:00 +0800
+
 kylin-recorder (1.2.23kord~rc15) v101; urgency=high
 
   * 修复bug42578：点击迷你模式后点击还原，窗口是最小化在任务栏，不是还原到正常窗口
