--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 kylin-recorder (1.2.23kord~rc22) v101.hw; urgency=medium
 
   * BUG号：54024、53888、50080、49370、48763、47386、47385、47288、47259、47215
-  * 任务号：29438、26155、29571
-  * 其他改动说明：增加ffmpeg库调用、修复应用统一性问题
+  * 任务号：29438
+  * 其他改动说明：修复应用统一性问题
   * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc22
 
  -- baijincheng <baijincheng@kylinos.cn>  Tue, 18 May 2021 14:39:00 +0800
