--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
-kylin-recorder (1.2.23kord~rc22) v101.hw; urgency=medium
+kylin-recorder (1.2.23kord~rc23) v101; urgency=medium
 
-  * BUG号：54024、53888、50080、49370、48763、47386、47385、47288、47259、47215
+  * BUG号：57114
+  * 任务号：无
+  * 其他改动说明：无
+  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc23
+
+ -- baijincheng <baijincheng@kylinos.cn>  Tue, 1 Jun 2021 20:07:00 +0800
+
+kylin-recorder (1.2.23kord~rc22) v101; urgency=medium
+
+  * BUG号：53888、47259、47215
   * 任务号：29438
   * 其他改动说明：修复应用统一性问题
   * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc22
