--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+kylin-recorder (1.2.23kord~rc24) v101; urgency=medium
+
+  * BUG号：无
+  * 需求号：6526、6529
+  * 其他改动说明：对于录制流程进行优化
+  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc24
+
+ -- zoujunnan <zoujunnan@kylinos.cn>  Sat, 5 Jun 2021 19:10:00 +0800
+
 kylin-recorder (1.2.23kord~rc23) v101; urgency=medium
 
   * BUG号：57114
