--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,30 @@
+kylin-recorder (1.2.23kord~rc27) v101; urgency=medium
+
+  * BUG号：59997
+  * 任务号：无
+  * 其他改动说明：无
+  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc27
+
+ -- baijincheng <baijincheng@kylinos.cn>  Thu, 10 Jun 2021 21:37:00 +0800
+
+kylin-recorder (1.2.23kord~rc26) v101; urgency=medium
+
+  * BUG号：47002
+  * 任务号：26155
+  * 其他改动说明：优化录音代码
+  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc26
+
+ -- baijincheng <baijincheng@kylinos.cn>  Wed, 9 Jun 2021 21:37:00 +0800
+
+kylin-recorder (1.2.23kord~rc25) v101; urgency=medium
+
+  * BUG号：无
+  * 需求号：无
+  * 其他改动说明：优化录音代码
+  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc25
+
+ -- baijincheng <baijincheng@kylinos.cn>  Wed, 9 Jun 2021 21:10:00 +0800
+
 kylin-recorder (1.2.23kord~rc24) v101; urgency=medium
 
   * BUG号：无
