--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+kylin-recorder (1.2.23kord~rc28) v101; urgency=medium
+
+  * BUG号：无
+  * 任务号：无
+  * 其他改动说明：增加一些提示框
+  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc28
+
+ -- baijincheng <baijincheng@kylinos.cn>  Fri, 11 Jun 2021 10:37:00 +0800
+
 kylin-recorder (1.2.23kord~rc27) v101; urgency=medium
 
   * BUG号：59997
