--- a/debian/changelog
+++ b/debian/changelog
@@ -1,532 +1,5 @@
-kylin-recorder (1.2.23kord~rc29) v101; urgency=medium
+kylin-recorder (1.2.23-1) focal; urgency=medium
 
-  * BUG号：无
-  * 任务号：无
-  * 其他改动说明：增加一些tooltips提示框
-  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc29
+  * Initial release.
 
- -- baijincheng <baijincheng@kylinos.cn>  Fri, 11 Jun 2021 17:20:00 +0800
-
-kylin-recorder (1.2.23kord~rc28) v101; urgency=medium
-
-  * BUG：61314
-  * 任务号：无
-  * 其他改动说明：无
-  * 影响域：启动麒麟录音后插拔麦克风;回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc28
-
- -- Xin Li <lixin@kylinos.cn>  Fri, 11 Jun 2021 20:03:53 +0800
-
-kylin-recorder (1.2.23kord~rc27) v101; urgency=medium
-
-  * BUG号：59997
-  * 任务号：无
-  * 其他改动说明：无
-  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc27
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 10 Jun 2021 21:37:00 +0800
-
-kylin-recorder (1.2.23kord~rc26) v101; urgency=medium
-
-  * BUG号：47002
-  * 任务号：26155
-  * 其他改动说明：优化录音代码
-  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc26
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 9 Jun 2021 21:37:00 +0800
-
-kylin-recorder (1.2.23kord~rc25) v101; urgency=medium
-
-  * BUG号：无
-  * 需求号：无
-  * 其他改动说明：优化录音代码
-  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc25
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 9 Jun 2021 21:10:00 +0800
-
-kylin-recorder (1.2.23kord~rc24) v101; urgency=medium
-
-  * BUG号：无
-  * 需求号：6526、6529
-  * 其他改动说明：对于录制流程进行优化
-  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc24
-
- -- zoujunnan <zoujunnan@kylinos.cn>  Sat, 5 Jun 2021 19:10:00 +0800
-
-kylin-recorder (1.2.23kord~rc23) v101; urgency=medium
-
-  * BUG号：57114
-  * 任务号：无
-  * 其他改动说明：无
-  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc23
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 1 Jun 2021 20:07:00 +0800
-
-kylin-recorder (1.2.23kord~rc22) v101; urgency=medium
-
-  * BUG号：53888、47259、47215
-  * 任务号：29438
-  * 其他改动说明：修复应用统一性问题
-  * 影响域：回归测试条件：1.包名：kylin-recorder    2.版本：>=1.2.23kord~rc22
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 18 May 2021 14:39:00 +0800
-
-kylin-recorder (1.2.23kord~rc21) v101.hw; urgency=medium
-
-  * BUG号：51054、50080、50077、50060、49861、49817、47386、47215、47288
-  * 需求号：无
-  * 其他改动说明：对于窗口置顶的方法进行优化采用Kwin的方法使得代码简洁一些
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 29 Apr 2021 21:45:00 +0800
-
-kylin-recorder (1.2.23kord~rc20) v101; urgency=medium
-
-  * BUG号：49256：录音 - 打开窗体未置顶显示
-  * 需求号：无
-  * 其他改动说明：无
-
- -- zoujunnan <zoujunnan@kylinos.cn>  Tue, 17 Apr 2021 12:05:00 +0800
-
-kylin-recorder (1.2.23kord~rc19) v101; urgency=medium
-
-  * BUG号：无
-  * 需求号：无
-  * 其他改动说明：修改界面名字为录音
-
- -- zoujunnan <zoujunnan@kylinos.cn>  Fri, 16 Apr 2021 12:05:00 +0800
-
-kylin-recorder (1.2.23kord~rc18) v101; urgency=medium
-
-  * 修复bug47300：设置格式为wav时，保存录音文件时，没有转码的过程 
-  * 修复bug47200：打开麒麟录音，接入耳麦后，应用卡死
-  * 修复bug47260：录音文件另存为时，打开文件位置仍是默认路径
-  * 修复bug47259：录音文件另存为时，输入文件名称没有做判空验证
-  * 修复bug47209：右侧文件播放列表，点击音频资料播放时，建议有一个播放的效果
-  * 修复bug47283：从默认路径下删除录音文件后，再次点击录音，文件列表未显示
-  * 修复bug47223：录音文件另存为时，不要默认改变文件的名称和格式
-  * 修复bug48487：录音格式保存为wav，变声
-  * 修复bug47215：将音频文件另存为时，弹框位置没有居中
-  * 修复bug47397：没有对另存为弹窗做模态处理，且另存为弹窗打开时，任务栏有两个麒麟录音任务图标
-  * 修复bug47393：对文件列表区域文件进行另存为时，另存为弹窗选择文件类型后，名称后缀不能自动跟随变化
-  * 修复bug47263：录音文件格式为wav时，打开文件失败
-  * 需求号：无
-  * 其他改动说明：无
-
- -- zoujunnan <zoujunnan@kylinos.cn>  Thu, 15 Apr 2021 14:43:00 +0800
-
-kylin-recorder (1.2.23kord~rc17) v101; urgency=high
-
-  * 修复bug44130：点击开始录音，等待系统自动关闭，重复多次测试，发现应用录音的时长不一致
-  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音
-  * 修复bug34915：在麒麟录音界面删除的录音文件，不会进入回收站，而是直接被删除了
-  * 修复bug41602：在录音时，点击音量进度条调节音量时，鼠标点击热区问题
-  * 修复bug41596：在录音时，建议点击音量图标可以进行静音操作
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 18 Mar 2021 16:22:00 +0800
-
-kylin-recorder (1.2.23kord~rc16) v101; urgency=high
-
-  * 修复bug43240：用户手册内容与麒麟录音实际情况不符
-  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 18 Mar 2021 16:22:00 +0800
-
-kylin-recorder (1.2.23kord~rc15) v101; urgency=high
-
-  * 修复bug42578：点击迷你模式后点击还原，窗口是最小化在任务栏，不是还原到正常窗口
-  * 修复bug32962：点击“迷你”后再点击“还原”按钮，概率性出现最小化到任务栏
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 17 Mar 2021 16:13:00 +0800
-
-kylin-recorder (1.2.23kord~rc14) v101; urgency=high
-
-  * 修复bug42481：关于中没有软件功能的描述
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 16 Mar 2021 21:54:00 +0800
-
-kylin-recorder (1.2.23kord~rc13) v101; urgency=high
-
-  * 修复bug42881：改变系统字号，文件列表时长跟随变化了，但功能菜单下拉列表没有跟随变化
-  * 修复bug42574：根据用户手册，设置中缺少m4a格式
-  * 修复bug41587：多个录音文件，连续删除时，删除1-2个文件后会有一个1~3s的卡顿
-  * 修复bug36574：连接蓝牙耳机无法录制音频
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 16 Mar 2021 12:05:00 +0800
-
-kylin-recorder (1.2.23kord~rc12) v101; urgency=high
-
-  * 修复bug40381：文件列表第7个文件显示一半
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 11 Mar 2021 21:27:00 +0800
-
-kylin-recorder (1.2.23kord~rc11) v101; urgency=high
-
-  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音
-  * 修复bug41442：在主界面点击录音图标后，鼠标悬浮文件列表某一文件，录音开始后，此文件一直为被选中状态
-  * 修复bug41589：开始录音时，连续点击暂停按钮，进度条不能正常进行
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 9 Mar 2021 15:27:00 +0800s
-
-kylin-recorder (1.2.23kord~rc10) v101; urgency=high
-
-  * 修复bug41693：长时间录音（10分钟以上），点击停止录音，弹出弹窗点击确定，连续多次点击停止录音，麒麟录音闪退
-  * 修复bug41685：长时间录音（10分钟以上），点击停止录音，弹出弹窗点击确定，连续多次点击停止录音，保存多个录音文件
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 8 Mar 2021 17:52:00 +0800
-
-kylin-recorder (1.2.23kord~rc9) v101; urgency=high
-
-  * DBus信号接收，代码对接
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Mar 2021 20:25:00 +0800
-
-kylin-recorder (1.2.23kord~rc8) v101; urgency=high
-
-  * 修复bug41279：静音图标显示不全
-  * 修复bug41257：录制时将音量调制静音，点击停止，再次点击录音后音量条在最左端却不显示静音图标
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Mar 2021 20:25:00 +0800
-
-kylin-recorder (1.2.23kord~rc7) v101; urgency=high
-
-  * 修复漏洞
-  * 解决mini模式下录音时点击关闭弹出提示框后还能关闭的问题。
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 2 Mar 2021 19:19:00 +0800
-
-kylin-recorder (1.2.23kord~rc6) v101; urgency=high
-
-  * 修复bug# 39136：应用的弹窗出现时应该于应用居中出现，而不是桌面居中出现
-  * 修复bug# 38975：录音过程中关闭麒麟录音后，再次打开麒麟录音时不能打开，终端报段错误
-  * 修复bug# 38923：深色模式下，关于弹窗链接没有反白
-  * 修复bug# 38883：主界面在正常窗口和 mini窗口之间切换时，任务栏麒麟录音图标闪烁
-
- -- zoujunnan <zoujunnan@kylinos.cn>  Thu, 25 Feb 2021 09:30:00 +0800
-
-kylin-recorder (1.2.23kord~rc5) v101; urgency=medium
-
-  * 修复bug# 38511：更改系统字体大小后，麒麟录音文字显示不全
-
- -- zoujunnan <zoujunnan@kylinos.cn>  Sun, 21 Feb 2021 09:30:00 +0800
-
-kylin-recorder (1.2.23kord~rc4) v101; urgency=medium
-
-  * 2021/02/04版本
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Feb 2021 09:30:00 +0800
-
-kylin-recorder (1.2.23kord~rc3) v101; urgency=medium
-
-  * 修复bug# 26216：录制时间过长时，保存弹窗弹出时间过长
-  * 修复bug# 34933：录音过程中直接点击关闭按钮时能够提示保存当前录音
-  * 修复bug# 24299：文件列表排列
-  * 修复bug# 37810：关于弹窗邮箱链接右键功能没有去除
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 3 Feb 2021 09:50:00 +0800
-
-kylin-recorder (1.2.23kord~rc2) v101; urgency=medium
-
-  * 去掉弹窗的border-radius,适配协议
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 1 Feb 2021 17:00:00 +0800
-
-kylin-recorder (1.2.23kord~rc1) v101; urgency=medium
-
-  * 更新版本号
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 1 Feb 2021 11:30:00 +0800
-
-kylin-recorder (1.2.23) v101; urgency=medium
-
-  * 修复bug# 35865：设置窗口默认不居中显示 
-  * 修复bug# 35607：保存录音时可将录音命名为.mp3，导致此音频变为隐藏文件  
-  * 修复bug# 34915：在麒麟录音界面删除的录音文件，不会进入回收站 
-  * 修复bug# 24333：文件列表缺少文件右键点击功能 
-
- -- baijincheng <baijincheng@kylinos.cn>  Fri, 29 Jan 2021 09:40:00 +0800
-
-kylin-recorder (1.2.22) v101; urgency=medium
-
-  * 关于界面服务与支持修改为链接
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 28 Jan 2021 09:40:00 +0800
-
-kylin-recorder (1.2.21) v101; urgency=medium
-
-  * 修复bug# 36272：【中文化】【麒麟录音】播放/暂停、删除按钮的悬浮框未汉化
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 27 Jan 2021 20:05:00 +0800
-
-kylin-recorder (1.2.20) v101; urgency=medium
-
-  * 修复bug# 34901：深色主题下主界面边框有白边
-  * 修复bug# 32064：保存文件时保存文件失败
-  * 修复bug# 25006：深色模式下，设置弹窗UI异常（设置界面白边）
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 25 Jan 2021 20:25:00 +0800
-
-kylin-recorder (1.2.19) v101; urgency=medium
-
-  * 修复bug#34793：设置界面边角显示黑色问题
-  * 修复bug#35236：播放和删除录音文件的悬浮提示未汉化
-  * 修复bug#24255：录音界面音量进度条数值大小修改
-  * 修复bug#20538：最小化到任务栏，缩略图窗口名未汉化
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 21 Jan 2021 20:25:00 +0800
-
-kylin-recorder (1.2.18) v101; urgency=medium
-
-  * 内测时，修复raw文件路径设置错误的问题
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 19 Jan 2021 20:25:00 +0800
-
-kylin-recorder (1.2.17) v101; urgency=medium
-
-  * 修复bug#33860：修改设置界面文件格式的间隔问题
-  * 修复bug#32051：深色主题下界面优化
-  * 修复bug#25006：深色模式下，设置弹窗UI异常
-  * 修复bug#34787：静音图标显示需优化
-  * 修改三联按钮的菜单按钮图标名,切换启动时加载列表的方式
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 19 Jan 2021 21:00:00 +0800
-
-kylin-recorder (1.2.16) v101; urgency=medium
-
-  * 修改desktop文件中的Name,首字母大写
-  * bug#31064：鼠标悬停在停止与暂停按钮上无提示
-
- -- baijincheng <baijincheng@kylinos.cn>  Fri, 15 Jan 2021 21:00:00 +0800
-
-kylin-recorder (1.2.15) v101; urgency=medium
-
-  * desktop文件更改应用类别组
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 14 Jan 2021 21:41:00 +0800
-
-kylin-recorder (1.2.14) v101; urgency=medium
-
-  * bug#33103：关于弹窗没有模态处理
-  * bug#33033：关于弹窗可以打开多个且不能关闭
-  * bug#31996：界面UI优化
-  * bug#31078：夜间模式下，麒麟录音菜单栏按钮反白
-  * bug#31064：鼠标悬停在停止与暂停按钮上无提示
-  * bug#26632：深色模式下，title区域按钮三态异常
-  * bug#24998：深色模式下主界面UI异常
-  * bug#24317：文件列表，文件描述显示不全
-  * bug#24246：深色主题时，mini窗口界面显示异常
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 14 Jan 2021 21:41:00 +0800
-
-kylin-recorder (1.2.13) v101; urgency=medium
-
-  * bug#31058：【麒麟录音】点击麒麟录音右上角菜单栏内的帮助和关于无反应
-  * bug#31062：【麒麟录音】保存窗口时间显示不完整
-  * bug#32014：【麒麟录音】m4a格式录制文件时会延长时间，并且所录制文件会按照延长时间慢放
-  * bug#26021：【麒麟录音】将鼠标放置在窗口右上角的功能按钮上无浮窗解释
-  * bug#31075：【麒麟录音】在音乐目录中删除音频文件，麒麟录音中不会同步
-  * bug#31089：【麒麟录音】鼠标悬停在停止与暂停按钮上无提示
-  * bug#31987：【麒麟录音】没有录制文件时文件列表提示文案“没有录音文件”没有居中
-  * bug#31966：【麒麟录音】功能下拉菜单中帮助点击无效果
-  * bug#32008：【麒麟录音】已录制文件时长显示比录制时间短
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 7 Jan 2021 10:01:00 +0800
-
-kylin-recorder (1.2.12) v101; urgency=medium
-
-  * 修复bug#27634 ：当前界面为麒麟录音mini界面时，按键F1没有弹出用户手册
-  * 修复bug#24337 ：文件列表文件的功能按钮没有点击状态颜色渐变效果，深色模式渐变,浅色模式未渐变
-  * 修复bug#24302 ：文件列表区分割线/进度条过宽
-  * 修复bug#26643 ：英文环境下，设置弹窗ui适配异常
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 24 Dec 2020 10:01:00 +0800
-
-kylin-recorder (1.2.11) v101; urgency=medium
-
-  * 修复bug#25989 ：200%缩放，麒麟录音工具界面部分显示异常
-  * 修复bug#29322 ：切换主题后文件列表区域文件名称不可见
-  * 修复bug#29299 ：窗口边框有黑色边框
-  * 修复bug#27634 ：当前界面为麒麟录音设置界面时，按键F1没有弹出用户手册
-  * 修复bug#26632 ：深色模式下，title区域按钮三态异常
-  * 修复bug#24998 ：深色模式下主界面UI异常
-  * 修复bug#24337 ：文件列表文件的功能按钮没有点击状态颜色渐变效果
-  * 修复bug#24302 ：文件列表区分割线/进度条
-  * 修复bug#24266 ：设置弹窗无毛玻璃效果
-  * 修复bug#24246 ：深色主题时，mini窗口界面显示异常
-  * 三联样式调整
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 24 Dec 2020 10:01:00 +0800
-
-kylin-recorder (1.2.10) v101; urgency=medium
-
-  * 修复bug#28119 ：播放一段录音，暂停后点击播放，录音从头开始播放
-  * 根据设计稿调整主界面各个按钮大小及间距以及圆角等
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 17 Dec 2020 16:30:00 +0800
-
-kylin-recorder (1.2.9) v101; urgency=medium
-
-  * 增加F1用户手册功能
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 26 Dec 2020 16:05:00 +0800
-
-kylin-recorder (1.2.8) v101; urgency=medium
-
-  * 修复bug#27397 ：首次录音完成后，第二次录音录音区域点击周边位置都可响应开始录音
-  * 修复bug#27381 ：麒麟录音文件设置另存为，保存录音文件时，设置重复的文件名未提示，直接覆盖
-  * 修复bug#27377 ：录音文件列表文件个数超过界面显示出现滚动条后，删除最后一个录音文件，麒麟录音闪退
-  * 修复bug#26662 ：深色模式下，设置弹窗关闭按钮未反白
-  * 修复bug#24629 ：建议将“存储为”更改为“另存为”，符合用户习惯
-  * 修复bug#24628 ：设置存储路径为“存储为”，打开另存窗口，窗口未汉化
-  * 修复bug#24333 ：文件列表缺少文件右键点击功能
-  * 修复bug#24308 ：文件列表区域，对下一个文件点击后，之前已点击文件没从点击状态取消
-  * 修复bug#24302 ：文件列表区分割线/进度条
-  * 修复bug#22835 ：主界面窗口边框无阴影
-  * 修复bug#21554 ：英文环境下，主界面和保存弹窗未翻译
-  * 修复bug#28475 ：mini窗口的话筒图标未上下居中
-
- -- baijincheng <baijincheng@kylinos.cn>  Tue, 15 Dec 2020 11:05:00 +0800
-
-kylin-recorder (1.2.7) v101; urgency=medium
-
-  * 调整第二次
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 26 Nov 2020 11:05:00 +0800
-
-kylin-recorder (1.2.6) v101; urgency=medium
-
-  * 调整一些功能
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 26 Nov 2020 11:05:00 +0800
-
-kylin-recorder (1.2.5) v101; urgency=medium
-
-  * 增加窗管圆角阴影适配
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 26 Nov 2020 11:05:00 +0800
-
-kylin-recorder (1.2.4) v101; urgency=medium
-
-  * 增加运行依赖，文件列表可以播放
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 23 Nov 2020 11:05:00 +0800
-
-kylin-recorder (1.2.3) v101; urgency=medium
-
-  * 修复bug#26008 ：文件列表中的录音文件时长显示不全
-  * 修复bug#24980 ：切换主题会导致录音软件卡死一会，卡死时间长短与已录制文件数成正比
-  * 修复bug#24631 ：设置存储路径为“存储为”，保存当前录音，再次进行一次新的录音，录音结束弹出的存储框中显示之前录音文件及路径
-  * 修复bug#24464 ：desktop没有comment字段
-  * 修复bug#24435 ：【台式机】录音无声音
-  * 修复bug#24304 ：文件列表区域已录制文件的录制时长显示不对
-  * 修复bug#24300 ：文件列表滑动条样式
-  * 修复bug#24291 ：录制时长超过1分零5秒时，本地文件类型和图标异常
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 20 Nov 2020 17:05:00 +0800
-
-kylin-recorder (1.2.2) v101; urgency=medium
-
-  * 藏文翻译desktop文件
-
- -- baijincheng <baijincheng@kylinos.cn>  Thu, 19 Nov 2020 17:09:00 +0800
-
-kylin-recorder (1.2.1) v101; urgency=medium
-
-  * 修复bug#24635 ：设置存储路径“存储为”，结束录制音频后，弹窗显示存储路径，显示文件名，但是没有保存按钮，一定要在位置处重新选择路径才能保存
-  * 修复bug#24620 ：主题更改为深色模式，麒麟录音界面中“文件列表”四个字消失
-  * 修复bug#23420 ：开始菜单麒麟录音图标显示异常，与任务栏麒麟录音图标不一致
-  * 修复bug#24435 ：【台式机】录音无声音
-  * 修复bug#24365 ：录音格式为wav时，录制文件有较大嘈杂声
-  * 修复bug#24338 ：mini窗口时，开始录音响应区域异常
-  * 修复bug#24312 ：文件列表已录制文件不可播放
-  * 修复bug#24303 ：文件列表可以多个文件同时播放
-  * 修复bug#24300 ：文件列表滑动条样式
-  * 修复bug#24249 ：文件列表没有和本地文件同步删除
-  * 修复bug#24246 ：深色主题时，mini窗口界面显示异常
-  * 修复bug#24245 ：深色模式时设置弹窗异常
-  * 修复bug#24241 ：录音区域点击任意位置都可响应开始录音
-  * 修复bug#24240 ：深色主题时，界面异常显示
-  * 修复bug#24223 ：浅色主题时点击主界面之外区域时，文件裂变区域会有灰色背景
-  * 修复bug#24219 ：主界面区域划分不妥当
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 4 Nov 2020 10:50:00 +0800
-
-kylin-recorder (1.2.0) v101; urgency=medium
-
-  * 麒麟录音新版本迭代
-  * 修复bug#23480 ：最大化之后拖拽回正常大小时，概率性不正常
-  * 修复bug#23473 ：界面无边框
-  * 修复bug#23420 ：开始菜单麒麟录音图标显示异常，与任务栏麒麟录音图标不一致
-  * 修复bug#23022 ：正常窗口和mini窗口切换图标颠倒
-  * 修复bug#23020 ：打开时任务栏没有图标显示
-  * 修复bug#22437 ：mini模式时任务栏图标显示不正确
-  * 修复bug#20859 ：建议添加选择录音保存路径的功能
-  * 修复bug#20857 ：建议添加命名录音文件的功能
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 4 Nov 2020 10:50:00 +0800
-
-kylin-recorder (1.0.10) v101; urgency=medium
-
-  * 单例模式兼容VNC
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 26 Oct 2020 19:09:00 +0800
-  
-kylin-recorder (1.0.9) v101; urgency=medium
-
-  * 解决禅道bug#22385 : 正常模式和mini模式窗口改变按钮图标相同
-  * 解决禅道bug#22368 : 打开非单例
-  * 更新图标主题适配
-  
- -- baijincheng <baijincheng@kylinos.cn>  Fri, 23 Oct 2020 09:30:00 +0800
-
-kylin-recorder (1.0.8) v101; urgency=medium
-
-  * 解决禅道bug#20967 ： 界面边界处无法拖拽
-  * 解决禅道bug#21055 ： 通过拖拽麒麟录音到桌面顶部实现最大化时，mini图标没有变化且界面四角为圆角
-  * 解决禅道bug#21263 ： 4K屏录音工具图标未适配
-
- -- baijincheng <baijincheng@kylinos.cn>  Mon, 19 Oct 2020 19:30:00 +0800
-
-kylin-recorder (1.0.7) v101; urgency=medium
-
-  * 修改项目名
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 7 Oct 2020 15:30:00 +0800
-
-kylin-recorder (1.0.6) v101; urgency=medium
-
-  * 解决禅道bug#20854 : 录音无声音
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 7 Oct 2020 15:30:00 +0800
-
-kylin-recorder (1.0.5) v101; urgency=medium
-
-  * 解决禅道bug#20984 : 首次进入录音界面时，暂停继续按钮图标显示不当
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 7 Oct 2020 08:50:06 +0800
-
-kylin-recorder (1.0.4) v101; urgency=medium
-
-  * 解决禅道bug#20968 : 界面按钮与设计存在差异
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 30 Sep 2020 17:06:06 +0800
-
-kylin-recorder (1.0.3) v101; urgency=medium
-
-  * 解决禅道bug#20679 : 开始菜单图标尺寸异常
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 30 Sep 2020 16:06:06 +0800
-
-kylin-recorder (1.0.2) v101; urgency=medium
-
-  * 解决禅道bug#20622 : 添加快捷方式到桌面，图标比其它应用的快捷方式图标要小
-  * 解决禅道bug#20565 : 开始录音，CPU占用率达到100%及以上
-  * 解决禅道bug#20538 : 最小化到任务栏，缩略图窗口名未汉化
-  * 解决禅道bug#20536 : 任务栏图标为中尺寸和大尺寸时，麒麟录音最小化到任务栏图标过小
-  * 解决禅道bug#20533 : 保存文件的确定按钮未汉化
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 30 Sep 2020 15:06:06 +0800
-
-kylin-recorder (1.0.1) unstable; urgency=medium
-
-  * 初始化麒麟录音项目
-
- -- baijincheng <baijincheng@kylinos.cn>  Wed, 16 Sep 2020 15:06:06 +0800
+ -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 17 Jun 2021 19:16:47 +0800
